--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         let customButtons = JSON.parse(localStorage.getItem('mindfulness_buttons') || '[]');
         let currentEmotion = "";
         let selectedScale = 3;
-        let viewDate = new Date(); // For calendar navigation
+        let viewDate = new Date(); 
         
         const defaultEmotions = [
             { name: "불안", color: "#f87171" }, { name: "화", color: "#ef4444" },
@@ -94,7 +94,6 @@
             { name: "질투", color: "#2dd4bf" }, { name: "적개심", color: "#475569" }
         ];
 
-        // View Logic
         function changeView(view) {
             const content = document.getElementById('view-content');
             document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('nav-active'));
@@ -109,18 +108,19 @@
         // --- Noticing View ---
         function renderNoticing() {
             const container = document.getElementById('view-content');
-            let buttonsHtml = '<div class="grid grid-cols-1 gap-2 mb-8">'; // gap을 3에서 2로 줄임
+            let buttonsHtml = '<div class="grid grid-cols-2 gap-3 mb-8">'; 
             
             const allButtons = [...defaultEmotions, ...customButtons];
             allButtons.forEach((item, index) => {
                 buttonsHtml += `
-                    <div class="flex items-center space-x-2 bg-white rounded-lg shadow-sm border border-gray-100">
-                        <button onclick="openModal('${item.name}')" class="flex-1 text-left py-2 px-4"> <!-- p-4를 py-2 px-4로 줄여 세로폭 감소 -->
-                            <span style="color: ${item.color}" class="emotion-bold text-base">${item.name}</span>을 알아차림
+                    <div class="relative flex flex-col items-center bg-white rounded-2xl shadow-sm border overflow-hidden" style="background-color: ${item.color}15; border-color: ${item.color}40">
+                        <button onclick="openModal('${item.name}')" class="w-full py-5 px-2 flex flex-col items-center justify-center text-center">
+                            <span style="color: ${item.color}" class="emotion-bold text-xl leading-tight mb-1">${item.name}</span>
+                            <span class="text-[10px] text-gray-500 font-medium">알아차림</span>
                         </button>
-                        <div class="flex flex-col pr-2 border-l border-gray-50">
-                            <button onclick="moveButton(${index}, -1)" class="text-gray-300 p-0.5 hover:text-blue-500"><i data-lucide="chevron-up" class="w-4 h-4"></i></button>
-                            <button onclick="moveButton(${index}, 1)" class="text-gray-300 p-0.5 hover:text-blue-500"><i data-lucide="chevron-down" class="w-4 h-4"></i></button>
+                        <div class="absolute top-1 right-1 flex flex-col space-y-0.5">
+                            <button onclick="moveButton(${index}, -1)" class="text-gray-400 p-1 hover:text-blue-500 bg-white/60 rounded-full"><i data-lucide="chevron-up" class="w-3 h-3"></i></button>
+                            <button onclick="moveButton(${index}, 1)" class="text-gray-400 p-1 hover:text-blue-500 bg-white/60 rounded-full"><i data-lucide="chevron-down" class="w-3 h-3"></i></button>
                         </div>
                     </div>
                 `;
@@ -220,7 +220,6 @@
             }
         }
 
-        // --- Calendar View ---
         function prevMonth() {
             viewDate.setMonth(viewDate.getMonth() - 1);
             renderCalendar();
@@ -246,7 +245,7 @@
                         <h2 class="text-center font-bold text-xl">${year}년 ${month + 1}월</h2>
                         <button onclick="nextMonth()" class="p-2 hover:bg-gray-100 rounded-full"><i data-lucide="chevron-right"></i></button>
                     </div>
-                    <div class="grid grid-cols-7 gap-0 text-center text-xs font-bold mb-0 border-t border-l border-gray-200">
+                    <div class="grid grid-cols-7 gap-0 text-center text-xs font-bold border-t border-l border-gray-200">
                         <div class="text-red-500 py-2 border-r border-b border-gray-200">일</div>
                         <div class="py-2 border-r border-b border-gray-200">월</div>
                         <div class="py-2 border-r border-b border-gray-200">화</div>
@@ -282,7 +281,6 @@
                 `;
             }
 
-            // 나머지 빈 칸 채우기
             const totalCells = firstDay + daysInMonth;
             const remaining = (7 - (totalCells % 7)) % 7;
             for (let i = 0; i < remaining; i++) {
@@ -332,7 +330,6 @@
             document.getElementById('detail-modal').classList.add('hidden');
         }
 
-        // --- Records View ---
         function renderRecords() {
             const container = document.getElementById('view-content');
             container.innerHTML = `
@@ -402,7 +399,6 @@
             lucide.createIcons();
         }
 
-        // Init
         window.onload = () => {
             changeView('noticing');
         };
